# 3D-image-segmentation-with-mesh

./: .gitignore  CMakeLists.txt  README.md  adapt_2.properties  square_arg.properties  square_round_2.txt  square_round_arg.properties  square_sin.properties
CGLA/: CMakeLists.txt
CImg/: CImg.h
DEMO/: InputParser.h  config.h  define.h  demo.cpp  draw.cpp  draw.h  draw_helper.cpp  draw_helper.h  export.cpp  export.hpp  gaussian_points.h  glut_menu.cpp  glut_menu.h  image3d.cpp  image3d.h  otsu_multi.h  probability_image.cpp  probability_image.hpp  segment_function.cpp  segment_function.h  test_cache.h  tet_dis_coord.cpp  tet_dis_coord.hpp  user_interface.cpp  user_interface.h
DSC_segment.xcodeproj/: project.pbxproj
DSC_segment.xcodeproj/project.xcworkspace/xcuserdata/tuannt8.xcuserdatad/: UserInterfaceState.xcuserstate
DSC_segment.xcodeproj/xcuserdata/tuannt8.xcuserdatad/xcschemes/: CGLA.xcscheme  DEMO.xcscheme  DSC.xcscheme  SCGenerator.xcscheme  SOIL.xcscheme  xcschememanagement.plist
LOG/: adapt_2.dsc  square_sin.dsc
Lib/glew-2.0.0/: glew.pc
SCGenerator/: generator.cpp  tetralizer.cpp
SOIL/: SOIL.c
TetGen/: tetgen.cpp
is_mesh/: attributes.h  is_mesh.h  kernel.h  mesh_io.cpp  simplex_set.h  util.h
linux/: DSC  Makefile  Makefile.bak  run_make.sh
shaders/: gouraud.vert
src/: DSC.cpp  DSC.h  cache.cpp  cache.hpp  profile.cpp  profile.h
